# node-odbc

./: .eslintrc.js  .gitignore  CMakeLists.txt  README.md  binding.gyp  package.json
lib/: odbc.js
src/: odbc.cpp  odbc.h  odbc_connection.cpp  odbc_connection.h  odbc_result.cpp  odbc_result.h  odbc_statement.cpp  odbc_statement.h
test/: config.testConnectionStrings.json  test-describe-database.js  test-describe-table.js  test-getInfoSync.js  test-issue-69.js  test-query-select-unicode.js  test-querySync-select-long-string.js  test-querySync-select-unicode.js
